--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   <div class="content">
     <div class="titulo">
         <h2 style="color: white;">Registros Libros📚</h2>
-        <button class="menu">Menu</button>
+
+        <div class="bugger-dropdown">
+        <div class="menu-container">
+          <button class="menu">Menu</button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Settings</a></li>
+        </ul>
+
+        </div>
+      </div>
+       
     </div>
 
     <div class="entradas">
@@ -33,10 +43,10 @@
     </div>
 
     <div class="opciones">
-      <button class="options_button">Editar Profesor</button>
-      <button class="options_button">Reporte</button>
-      <button class="options_button">Editar</button>
-      <button class="options_button">Salir</button>
+      <a href="edit-professor.html"><button style=" background-color: #ffee00;" class="options_button">Editar Profesor</button></a>
+      <a href="reporte.html"><button style="background-color: #ff00e1;" class="options_button">Reporte</button></a>
+      <a href="editar.html"><button style="background-color: #00ff00;" class="options_button">Editar</button></a>
+      <a href=""><button style="background-color: #ff0000;" class="options_button">Salir</button></a>
      </div>
      
 
