--- a/add-professor.html
+++ b/add-professor.html
@@ -7,13 +7,13 @@
 <body>
   <div class="content">
     <div class="titulo">
-        <h2 style="color: white;">Editar📚</h2>
+        <h2 style="color: white;">Agregar Profesor📚</h2>
 
         <div class="bugger-dropdown">
         <div class="menu-container">
           <button class="menu">Menu</button>
         <ul class="dropdown-menu">
-          <li><a href="editar.html">Go Back</a></li>
+          <li><a href="index.html">Go Back</a></li>
         </ul>
 
         </div>
@@ -22,21 +22,14 @@
     </div>
 
     <div class="entradas">
-      <h3>Recomendacion:</h3>
+      <h3>Nuevo Profesor:</h3>
         <form>
-            <label for="fname">Titulo:</label>
+            <label for="fname">Nombre:</label>
             <input placeholder="Enter your text..." class="input" name="text" type="text"><br>
-            <label for="lname">Autor:</label>
+            <label for="lname">Departamento Academico:</label>
             <input placeholder="Enter your text..." class="input" name="text" type="text"><br>
-            <label for="lname">Recomendado por:</label>
-            <select id="opciones" name="opciones">
-          <option value="" disabled selected hidden>Seleccione una opción...</option>
-          <option value="opcion1">Opción 1</option>
-          <option value="opcion2">Opción 2</option>
-          <option value="opcion3">Opción 3</option>
-            </select>
-          <label for="lname">Fecha:</label>
-          <input type="date" class="input"><br>
+            <label for="lname">Programa Academico:</label>
+            <input placeholder="Enter your text..." class="input" name="text" type="text"><br>
           </form>
             <div class="submit_container">
             <button class="submit_button">Save</button>
