--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="menu-container">
           <button class="menu">Menu</button>
         <ul class="dropdown-menu">
-            <li><a href="#">Settings</a></li>
+            <li><a href="settings.html">Settings</a></li>
         </ul>
 
         </div>
@@ -43,6 +43,7 @@
     </div>
 
     <div class="opciones">
+      <a href="add-professor.html"><button style=" background-color: #ff9100;" class="options_button">Agregar Profesor</button></a>
       <a href="edit-professor.html"><button style=" background-color: #ffee00;" class="options_button">Editar Profesor</button></a>
       <a href="reporte.html"><button style="background-color: #ff00e1;" class="options_button">Reporte</button></a>
       <a href="editar.html"><button style="background-color: #00ff00;" class="options_button">Editar</button></a>
