--- a/professor.html
+++ b/professor.html
@@ -13,7 +13,7 @@
         <div class="menu-container">
           <button class="menu">Menu</button>
         <ul class="dropdown-menu">
-            <li><a href="#">Go back</a></li>
+          <li><a href="edit-professor.html">Go Back</a></li>
         </ul>
 
         </div>
