--- a/reporte.html
+++ b/reporte.html
@@ -15,7 +15,7 @@
                 <div class="menu-container">
                   <button class="menu">Menu</button>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Go back</a></li>
+                    <li><a href="index.html">Go Back</a></li>
                     
                 </ul>
         
