--- a/recomendacion.html
+++ b/recomendacion.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Books.</title>
+  <title>Editar Recomendación</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="content">
     <div class="titulo">
-        <h2 style="color: white;">Editar📚</h2>
+      <h2 style="color: white;">Editar📚</h2>
 
-        <div class="bugger-dropdown">
+      <div class="bugger-dropdown">
         <div class="menu-container">
           <button class="menu">Menu</button>
-        <ul class="dropdown-menu">
-          <li><a href="editar.html">Go Back</a></li>
-        </ul>
-
+          <ul class="dropdown-menu">
+            <li><a href="editar.html">Go Back</a></li>
+          </ul>
         </div>
       </div>
-       
     </div>
 
     <div class="entradas">
-      <h3>Recomendacion:</h3>
-        <form>
-            <label for="fname">Titulo:</label>
-            <input placeholder="Enter your text..." class="input" name="text" type="text"><br>
-            <label for="lname">Autor:</label>
-            <input placeholder="Enter your text..." class="input" name="text" type="text"><br>
-            <label for="lname">Recomendado por:</label>
-            <select id="opciones" name="opciones">
+      <h3>Recomendación:</h3>
+      <form id="edit-form">
+        <label for="titulo">Título:</label>
+        <input id="titulo" placeholder="Enter your text..." class="input" name="titulo" type="text"><br>
+
+        <label for="autor">Autor:</label>
+        <input id="autor" placeholder="Enter your text..." class="input" name="autor" type="text"><br>
+
+        <label for="opciones">Recomendado por:</label>
+        <select id="opciones" name="opciones">
           <option value="" disabled selected hidden>Seleccione una opción...</option>
-          <option value="opcion1">Opción 1</option>
-          <option value="opcion2">Opción 2</option>
-          <option value="opcion3">Opción 3</option>
-            </select>
-          <label for="lname">Fecha:</label>
-          <input type="date" class="input"><br>
-          </form>
-            <div class="submit_container">
-            <button class="submit_button">Save</button>
-            </div>
+        </select>
+
+        <label for="fecha">Fecha:</label>
+        <input id="fecha" type="date" class="input" name="fecha"><br>
+      </form>
+
+      <div class="submit_container">
+        <button id="save-button" class="submit_button">Save</button>
+      </div>
     </div>
-
-
-
-    </div>
-    
-
   </div>
   
+
+  <script src="recomendacion-edit-script.js" defer></script>
 </body>
 </html>
