--- a/editar.html
+++ b/editar.html
@@ -25,7 +25,7 @@
 
         <div class="contenido_db">
             <div class="search_db_container">
-                <input placeholder="Enter your text..." class="input" name="text" type="text" style="width: 70%;">
+                <input id="search-input" placeholder="Enter your text..." class="input" name="text" type="text" style="width: 70%;">
                 <button class="search_button">Search</button>
             </div>
             <table>
