--- a/reporte.html
+++ b/reporte.html
@@ -10,7 +10,7 @@
     <div class="content">
 
         <div class="titulo">
-            <h2 style="color: white;">Editar Profesores📚</h2>
+            <h2 style="color: white;">Tipos de Reportes📚</h2>
             <div class="bugger-dropdown">
                 <div class="menu-container">
                   <button class="menu">Menu</button>
@@ -24,17 +24,29 @@
         </div>
 
         <div class="contenido_db">
-            <div class="search_db_container">
-                <select id="opciones" name="opciones" style=" width: 70%;">
-                    <option value="opcion1">Opción 1</option>
-                    <option value="opcion2">Opción 2</option>
-                    <option value="opcion3">Opción 3</option>
-                      </select>
-                <button class="search_button">Search</button>
-            </div>
-            <div class="reporte">
+            
+            <div class="tipos-de-reportes">
 
-                <h1>Elija tipo de reporte</h1>
+
+                <a href="reporte-renderer.html">
+                    <button class="reporte-container">
+                        <h3>Reporte de todos los profesores</h3>
+                    </button>
+                    </a>
+
+                    <a href="reporte-especifico-profesor.html">
+                        <button class="reporte-container">
+                            <h3>Reporte de profesor en especifico</h3>
+                        </button>
+                    </a>
+
+                <a href="reporte-recomendaciones-fecha.html">
+                <button class="reporte-container">
+                    <h3>Reporte de recomendaciones por fecha</h3>
+                </button>
+                </a>
+
+                
             </div>
 
         </div>
