--- a/settings.html
+++ b/settings.html
@@ -28,7 +28,9 @@
 <div class="settings-content-box"> 
     <h3>https://github.com/camachi/Proyecto-DB-Libros</h3>
 </div>
-
+<div class="settings-content-box"> 
+  <a href="https://github.com/camachi"><button class="edit_button">Github</button></a>
+</div>
 
 
 
