--- a/reporte-profesortodo.html
+++ b/reporte-profesortodo.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte del Profesor</title>
     <link rel="stylesheet" href="style.css">
-    <script src="renderer-reporte-profesortodo.js" defer></script>
-    <script src="pdf-descarga-script.js" defer></script>
 </head>
 <body>
     <div class="content">
@@ -24,7 +22,6 @@
 
         <div class="contenido_db_renderer">
             <img src="Inter-San-German-LOGO.png" alt="Descripción de la imagen">
-            
             <h3>Reporte</h3>
             <div class="contenedor-prof-info"></div>
             <table>
@@ -43,5 +40,7 @@
         </div>
         <button id="downloadPDF" class="descargar-pdf">Descargar Pdf</button>
     </div>
+    <script src="renderer-reporte-profesortodo.js"></script>
+    <script src="pdf-descarga-script.js"></script>
 </body>
 </html>
